add api tests
