# docs/swagger.yaml
@@ -192,15 +192,15 @@ paths:
         - application/json
       description: get contacts
       parameters:
-        - description: page number
+        - description: page number (default 1)
           in: query
           name: page
           type: integer
-        - description: page size
+        - description: page size (default 20)
           in: query
           name: page_size
           type: integer
-        - description: search query
+        - description: search query, search by name or activity
           in: query
           name: search
           type: string
@@ -211,6 +211,18 @@ paths:
             type: integer
           name: tag
           type: array
+        - description: latitude
+          in: query
+          name: lat
+          type: number
+        - description: longitude
+          in: query
+          name: lng
+          type: number
+        - description: radius in km
+          in: query
+          name: radius
+          type: integer
       produces:
         - application/json
       responses:
